Opened 14 years ago

Closed 14 years ago

#7281 closed bug (fixed)

Shutdown is not localized

Reported by: deejam Owned by: phoudoin
Priority: normal Milestone: R1
Component: Servers/registrar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Shutdown is not localized. See attached images.

GCC2 hybrid. hrev40624.

Attachments (4)

Shutdown_dialog.png (5.8 KB ) - added by deejam 14 years ago.
Shutdown dialog
Shutdown_tracker.png (7.8 KB ) - added by deejam 14 years ago.
Shutdown Tracker
Shutdown_quit_processes.png (5.6 KB ) - added by deejam 14 years ago.
Shutdown quit processes
Shutdown_tidying_up.png (5.4 KB ) - added by deejam 14 years ago.
Shutdown tidying up

Download all attachments as: .zip

Change History (6)

by deejam, 14 years ago

Attachment: Shutdown_dialog.png added

Shutdown dialog

by deejam, 14 years ago

Attachment: Shutdown_tracker.png added

Shutdown Tracker

by deejam, 14 years ago

Attachment: Shutdown_quit_processes.png added

Shutdown quit processes

by deejam, 14 years ago

Attachment: Shutdown_tidying_up.png added

Shutdown tidying up

comment:1 by phoudoin, 14 years ago

Owner: changed from bonefish to phoudoin
Status: newin-progress

comment:2 by phoudoin, 14 years ago

Resolution: fixed
Status: in-progressclosed

Done in hrev40682.

Note: See TracTickets for help on using tickets.